--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.9",
@@ -17,6 +18,7 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-router": "^7.7.1",
     "react-router-dom": "^7.7.0",
     "tailwind-merge": "^3.3.1"
   },
